--- a/webpack/host/src/styles/App.css
+++ b/webpack/host/src/styles/App.css
@@ -8,33 +8,39 @@
     display: flex;
     flex-direction: row;
     flex: 1;
+    background-color: blue;
   }
+
+  .sidebar-container {
+    height: inherit;
+    background-color: aqua;
+
+  }
+
+  .component-drag-holder{
+    display: flex;
+    flex-direction: row;
+    /* flex: 1; */
+    height: 50px;
+    align-items: center;
+    background-color: aliceblue;
+  }
+
+  .drag-component{
+    flex: 1;
+    padding: 10px;
+    cursor: grab;
+  }
+  
+.drop-target {
+  /* create a glowing border */
+  border: 2px dashed rgb(4, 217, 7);
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px #ccc;
+}
   
   main {
     flex: 1;
     padding: 20px;
   }
-  
-  /* aside {
-    width: 200px;
-    background-color: #f5f5f5;
-  } */
-  
-  /* header {
-    background-color: #333;
-    color: white;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    padding: 0 20px;
-  }
-  
-  footer {
-    background-color: #333;
-    color: white;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  } */
   
